# android-no-glue

./: .gitignore  Cargo.toml
src/: app.rs  lib.rs  main.rs
